# grove

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  dist-workspace.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
docs/: 00-master-plan.md  01-architecture.md  02-cli-ux.md  03-git-internals.md  04-launch-test-ci.md
src/: display.rs  error.rs  lib.rs  main.rs  paths.rs
src/cli/: adopt.rs  cd.rs  completions.rs  done.rs  fork.rs  freeze.rs  launch.rs  list.rs  mod.rs  new.rs  path.rs  rename.rs  repo.rs  status.rs
src/cli/snapshots/: grove__cli__list__tests__list__basic.snap  grove__cli__list__tests__list__json.snap  grove__cli__list__tests__list__json_no_status.snap  grove__cli__list__tests__list__short.snap  grove__cli__status__tests__status__json_clean.snap  grove__cli__status__tests__status__json_dirty.snap
src/config/: global.rs  mod.rs  repo.rs
src/git/: gix_backend.rs  mod.rs  shell_backend.rs  status.rs
src/launch/: mock_terminal.rs  mod.rs  wezterm.rs  windows_terminal.rs
src/migrate/: mod.rs
src/registry/: mod.rs  project.rs
src/repo/: mod.rs
tests/: adopt_cmd.rs  config_global_round_trip.rs  fork_cmd.rs  gix_backend.rs  migrate_real_config.rs  new_cmd.rs  phase3_e2e.rs  registry_round_trip.rs  rename_cmd.rs  repo_add_cmd.rs  snapshots_readonly.rs
tests/common/: mod.rs
tests/snapshots/: snapshots_readonly__list__json_fixture.snap  snapshots_readonly__list__no_color_table.snap  snapshots_readonly__list__short_alpha.snap  snapshots_readonly__list__table_alpha.snap  snapshots_readonly__list__table_beta.snap  snapshots_readonly__status__json_fixture.snap
