[package]
name = "grove"
version = "0.1.0-pre"
edition = "2024"
rust-version = "1.89"
authors = ["Øystein Krog <oystein.krog@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast multi-repo git-worktree manager"
repository = "https://github.com/oysteinkrog/grove"
homepage = "https://github.com/oysteinkrog/grove"
readme = "README.md"
keywords = ["git", "worktree", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "grove"
path = "src/lib.rs"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
comfy-table = "7.2.2"
directories = "6.0.0"
# sha1 + revision for HEAD/ref inspection; worktree-stream brings in gix-worktree for Proxy::into_repo
# status enables repo.is_dirty() + repo.status() for untracked-file iteration
# index required by status for index-read operations
gix = { version = "0.83.0", default-features = false, features = ["sha1", "revision", "worktree-stream", "status", "index"] }
is-terminal = "0.4.17"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "serde-well-known", "macros", "formatting", "parsing", "local-offset"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
which = "8.0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
serde_json = "1.0.150"
serial_test = "3.4.0"
tempfile = "3.27.0"
